# honpas-4.1

./: Doxyfile  README  README_CHESS  RELEASE_NOTES  TODO  quickcheck.sh  version.info
Docs/: CHANGES  CHANGES.tddft02  Contributors.txt  README  REPORTING_BUGS  SOC_offsite_notes.txt  compatibility.tex  install_flook.bash  install_netcdf4.bash  release.sh  siesta.bib  siesta.tex  tbtrans.tex
Docs/branch-changes/: CHANGES.tddft  NOTES.tddft  TS-scf.CHANGES
Docs/developer/ford-pages/: contributions.md  grid.md
Docs/hybrid-xc/configs/: arch-gfortran-debug.make
Docs/hybrid-xc/diagrams/: .gitignore  Makefile  siesta-honpas-files-32p5-jul17-nov17.dot  siesta-honpas-files-41b3-jul17-nov17.dot
Docs/hybrid-xc/report/: Makefile  conf.py  dictionary.rst  discussions.rst  index.rst  relevant-variables.rst  road-blocks.rst  siesta-bsc-changes.rst
Docs/tex/: fdf.tex  packages.tex
Src/: Makefile  README.md  alloc.F90  atm_types.f  atmfuncs.f  atmparams.f  atom.F  atom_graph.F90  atomlist.f  bands.F  basis_io.F  basis_specs.f  basis_types.f  broadcast_basis.F  bsc_cellxc.F  bsc_xcmod.F  cellxc_mod.F  class_Data1D.F90  class_Data1D.T90  class_Data2D.F90  class_Data2D.T90  class_Data3D.F90  class_Data3D.T90  class_SpData1D.F90  class_SpData2D.F90  class_SpData2D.T90  class_SpData3D.F90  class_SpData3D.T90  class_TriMat.T90  compute_dm.F  compute_energies.F90  compute_max_diff.F90  cranknic_evolg.F90  cranknic_evolk.F90  delk.F90  dfscf.f  dhscf.F  diag.F90  diag2g.F  diag2k.F  (+177 more)
Src/Gaufre/: Makefile  chkder.f90  dogleg.f90  enorm.f90  enorm2.f90  fdjac1.f90  fdjac2.f90  gaufre.F90  gaufre_common.F90  gaufre_config.F90  gaufre_data.F90  gaufre_driver.F90  gaufre_io.F90  gaufre_minpack.F90  gaufre_orbital.F90  hybrd.f90  hybrd1.f90  hybrj.f90  hybrj1.f90  lmder.f90  lmder1.f90  lmdif.f90  lmdif1.f90  lmpar.f90  lmstr.f90  lmstr1.f90  qform.f90  qrfac.f90  qrsolv.f90  r1mpyq.f90  r1updt.f90  r8_uniform_01.f90  r8mat_print.f90  r8mat_print_some.f90  r8vec_print.f90  rwupdt.f90  timestamp.f90
Src/Libint/: Makefile
Src/Libint_Glue/: Makefile
Src/Libs/: lapack.F
Src/MatrixSwitch/: .gitignore  Makefile.am  README  autogen.sh  configure.ac  quickcheck.sh  wipeout.sh
Src/MatrixSwitch/config/data/: MatrixSwitch-config.yaml.in  MatrixSwitch.pc.in
Src/MatrixSwitch/config/m4/: fortran.m4  linalg.m4  mpi.m4  pspBLAS.m4
Src/MatrixSwitch/doc/: Doxyfile  Makefile.am  configuring-MatrixSwitch.md  contributing-to-MatrixSwitch.md  hacking-the-build-system.md
Src/MatrixSwitch/doc/data/: msw_footer.html  msw_header.html
Src/MatrixSwitch/examples/: Makefile.am  Makefile.manual  example_pddbc.F90  example_pddbc_wrapper.F90  example_pzdbc.F90  example_pzdbc_wrapper.F90  example_sdden.F90  example_sdden_wrapper.F90  example_szden.F90  example_szden_wrapper.F90  make.inc.example
Src/MatrixSwitch/src/: Makefile  Makefile.am  MatrixSwitch.F90  MatrixSwitch_m_add.F90  MatrixSwitch_m_copy.F90  MatrixSwitch_m_register.F90  MatrixSwitch_m_set.F90  MatrixSwitch_mm_multiply.F90  MatrixSwitch_ops.F90  MatrixSwitch_wrapper.F90  MatrixSwitch_wrapper_params.F90  dependencies.mf  make.inc  make.inc.example
Src/Orphans/: new_dm.F
Src/SiestaXC/: atomxc.F90  cellxc.F90  ggaxc.f  makefile  mesh3d.F90  siestaXC.files
Src/fdf/: fdf.F90
Src/ncdf/: Makefile  Makefile.project
Src/ncdf/src/: Makefile.inc  ncdf.sh  netcdf_ncdf_att_inc.inc  netcdf_ncdf_pp.F90  netcdf_ncdf_var_inc.inc
Src/ncdf/test/: tst_ncdf_3.F90  tst_ncdf_4.F90  tst_ncdf_att.F90  tst_ncdf_crt.F90
Src/wxml/: m_wxml_buffer.f90
Tests/: .gitignore  Makefile  out_digest.awk  test_tddft.mk
Tests/CheSS/: CheSS.fdf  makefile
Tests/FePt_soc/: FePt_soc.fdf  makefile
Tests/More_SOC_Examples/: README
Tests/More_SOC_Examples/offsite_SOC_FePt_xx/: FePtxx.fdf
Tests/More_SOC_Examples/offsite_SOC_FePt_xz/: FePtxz.fdf
Tests/More_SOC_Examples/offsite_SOC_FePt_zy/: FePtzy.fdf
Tests/More_SOC_Examples/offsite_SOC_FePt_zz/: FePtzz.fdf  FePtzz.pseudos
Tests/More_SOC_Examples/offsite_SOC_Pt2_xx/: Pt2xx.fdf  makefile
Tests/More_SOC_Examples/offsite_SOC_Pt2_xz/: Pt2xz.fdf  makefile
Tests/More_SOC_Examples/offsite_SOC_Pt2_zy/: Pt2zy.fdf
Tests/More_SOC_Examples/offsite_SOC_Pt2_zz/: Pt2zz.fdf  Pt2zz.pseudos
Tests/More_SOC_Examples/onsite_SOC_FePt_xx/: FePtxx.fdf
Tests/More_SOC_Examples/onsite_SOC_FePt_xz/: FePtxz.fdf  makefile
Tests/More_SOC_Examples/onsite_SOC_FePt_zy/: FePtzy.fdf
Tests/More_SOC_Examples/onsite_SOC_FePt_zz/: FePtzz.fdf  makefile
Tests/More_SOC_Examples/onsite_SOC_Pt2_xx/: Pt2xx.fdf
Tests/More_SOC_Examples/onsite_SOC_Pt2_xz/: Pt2xz.fdf
Tests/More_SOC_Examples/onsite_SOC_Pt2_zy/: Pt2zy.fdf  makefile
Tests/More_SOC_Examples/onsite_SOC_Pt2_zz/: Pt2zz.fdf  makefile
Tests/Pseudos/: Pt_pt2_SOC.psf
Tests/Pt_dimer_soc/: Pt_dimer_soc.fdf  makefile
Tests/TDDFT_Ge/: Ge.TDXV  Makefile  TDDFT_Ge.pseudos  TDDFT_Ge1.fdf  TDDFT_Ge2.fdf
Tests/TDDFT_h2o/: Makefile  TDDFT_h2o1.fdf  TDDFT_h2o2.fdf
Tests/TranSiesta-TBTrans/: copy_to_reference.sh
Tests/TranSiesta-TBTrans/ts_au/: au_111_capacitor.fdf  script.sh
Tests/TranSiesta-TBTrans/ts_au_100_0.25V/: au_100.fdf
Tests/TranSiesta-TBTrans/ts_term3/: term3.fdf  (+1 more)
Tests/YAML_Refs/: benzene.yml  h2o.yml  mno_ldau.yml
Tests/flos_h2o_neb/: neb.lua
Tests/ge_soc_bands/: README  ge_soc_bands.fdf  makefile
Tests/mix_broyden/: mix_broyden.fdf
Tests/si_coop_kp_file/: makefile  si_coop_kp_file.KP.input  si_coop_kp_file.fdf
Tests/wannier/: makefile  wannier.fdf
Util/: README  build_all.sh
Util/Bands/: gnubands.f90
Util/COOP/: Makefile  dm_creator.F90  fat.f90  io_hs.f90  main_vars.f90  mprop.f90  subs.f90
Util/Eig2DOS/: Eig2DOS.f90
Util/Gen-basis/: Makefile  gen-basis.F
Util/Grid/: README  g2c_ng.f  m_gridfunc.F90  makefile
Util/Grimme/: Makefile
Util/Helpers/: Makefile
Util/MPI_test/: Makefile
Util/SpPivot/: Makefile
Util/TS/: README
Util/VCA/: Makefile
Util/WFS/: info_wfsx.f  makefile  readwfx.f  wfs2wfsx.f  wfsnc2wfsx.F90  wfsx2wfs.f
Util/nao2gto/: nao2gto_plot_bands.sh  nao2gto_plot_fits.py  nao2gto_plot_gaussians.py  requirements.txt
(+138 files in other folders)
