check_PROGRAMS = \
  example_sdden.x \
  example_szden.x \
  example_pddbc.x \
  example_pzdbc.x \
  example_sdden_wrapper.x \
  example_szden_wrapper.x \
  example_pddbc_wrapper.x \
  example_pzdbc_wrapper.x

example_sdden_x_SOURCES = example_sdden.F90
example_sdden_x_FCFLAGS = -I../src
example_sdden_x_LDADD = ../src/libMatrixSwitch.la

example_szden_x_SOURCES = example_szden.F90
example_szden_x_FCFLAGS = -I../src
example_szden_x_LDADD = ../src/libMatrixSwitch.la

example_pddbc_x_SOURCES = example_pddbc.F90
example_pddbc_x_FCFLAGS = -I../src
example_pddbc_x_LDADD = ../src/libMatrixSwitch.la

example_pzdbc_x_SOURCES = example_pzdbc.F90
example_pzdbc_x_FCFLAGS = -I../src
example_pzdbc_x_LDADD = ../src/libMatrixSwitch.la

example_sdden_wrapper_x_SOURCES = example_sdden_wrapper.F90
example_sdden_wrapper_x_FCFLAGS = -I../src
example_sdden_wrapper_x_LDADD = ../src/libMatrixSwitch.la

example_szden_wrapper_x_SOURCES = example_szden_wrapper.F90
example_szden_wrapper_x_FCFLAGS = -I../src
example_szden_wrapper_x_LDADD = ../src/libMatrixSwitch.la

example_pddbc_wrapper_x_SOURCES = example_pddbc_wrapper.F90
example_pddbc_wrapper_x_FCFLAGS = -I../src
example_pddbc_wrapper_x_LDADD = ../src/libMatrixSwitch.la

example_pzdbc_wrapper_x_SOURCES = example_pzdbc_wrapper.F90
example_pzdbc_wrapper_x_FCFLAGS = -I../src
example_pzdbc_wrapper_x_LDADD = ../src/libMatrixSwitch.la

LOG_COMPILER = $(TESTS_CMD)

TESTS = \
  example_sdden.x \
  example_szden.x \
  example_pddbc.x \
  example_pzdbc.x \
  example_sdden_wrapper.x \
  example_szden_wrapper.x \
  example_pddbc_wrapper.x\
  example_pzdbc_wrapper.x
